# templatehoshii

./: Cargo.toml  README.md  spec.md
src/: add.rs  config.rs  data.rs  dump.rs  lib.rs  main.rs  repository.rs  rm.rs
test/template1/: hoge
test/template2/: fuga  this_template_has_2_files
test/template3/subdir/: file
